/*
 * $Id: ChangeLog,v 1.3570 2004/11/01 21:01:20 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-11-01 22:32 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/bin/postinst.sh
  * xharbour/bin/hb-func.sh
    * some minor modification

  * xharbour/source/compiler/calconst.c
    * casting

2004-11-01 22:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/bin/hb-func.sh
    * added "-no-cpp-precomp -Wno-long-double" for gcc compilation
      on Darwin

2004-11-01 13:25 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  + ChangeLog.021
    * Renamed ChangeLog to ChangeLog.021.
  * source/debug/debugger.prg
    ! Save and restore application's _SET_FILECASE setting.